# pyside6-playground

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  README.md  SECURITY.md  dev-requirements.txt  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: conf.py  hello_world.rst  index.rst  modules.rst  pyside6_playground.qt_hello_world.rst  pyside6_playground.rst
hello_world/: __init__.py  hello_world.py
pyside6_playground/: __init__.py
pyside6_playground/qt_00_hello_world/: hello_world.py  main.py
pyside6_playground/qt_01_dialog/: __init__.py  dialog.py  main.py
pyside6_playground/qt_02_table/: __init__.py  constants.py  main.py  table.py  utils.py
pyside6_playground/qt_03_tree/: __init__.py  constants.py  main.py  tree.py
pyside6_playground/qt_hello_world/: __init__.py  hello_world.py  main.py
tests/: hello_world_test.py  pyside6_install_test.py
