[tool.poetry]
name = "modern-python-setup"
version = "0.1.0"
description = "A modern python project setup."
authors = ["Milan van Wouden <milanvanwouden@live.nl>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.5"
pre-commit = "^3.3.3"
pytest = "^7.2.0"
pyupgrade = "^3.3.1"
typeguard = "^4.1.2"
pytest-cov = "^4.0.0"
sphinx = "^7.2.3"
sphinx-rtd-theme = "^1.3.0"
flake8-bugbear = "^23.1.20"
flake8-bandit = "^4.1.1"
flake8-annotations = "^3.0.0"
darglint = "^1.8.1"
flake8-docstrings = "^1.6.0"
flake8-isort = "^6.0.0"
flake8-use-pathlib = "^0.3.0"
pep8-naming = "^0.13.3"
flake8-annotations-coverage = "^0.0.6"
flake8-simplify = "^0.20.0"
flake8-async = "^22.11.14"
flake8-encodings = "^0.5.0.post1"
flake8-requirements = "^1.7.6"
flake8-return = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.11
packages = ["hello_world"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest]
minversion = 7
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    | .git
    | .mypy_cache
    | .pytest_cache
    | venv
    | build
    | dist
  )/
'''

[tool.isort]
py_version = 311
profile = "black"
line_length = 79
multi_line_output = 5
include_trailing_comma = true
