[tool.poetry]
name = "pyside6-playground"
version = "0.1.0"
description = "A PySide6 Playground."
authors = ["Milan van Wouden <milanvanwouden@live.nl>"]
readme = "README.md"
packages = [{include = "pyside6_playground"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "6.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pytest = "^7.4.1"
pyupgrade = "^3.13.0"
typeguard = "^4.1.3"
pytest-cov = "^4.0.0"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
flake8-bugbear = "^23.1.20"
flake8-bandit = "^4.1.1"
flake8-annotations = "^3.0.0"
darglint = "^1.8.1"
flake8-docstrings = "^1.6.0"
flake8-use-pathlib = "^0.3.0"
pep8-naming = "^0.13.3"
flake8-annotations-coverage = "^0.0.6"
flake8-simplify = "^0.20.0"
flake8-async = "^22.11.14"
flake8-encodings = "^0.5.0.post1"
flake8-requirements = "^1.7.6"
flake8-return = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
minversion = 7
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    | .git
    | .pytest_cache
    | venv
    | build
    | dist
  )/
'''

[tool.isort]
py_version = 311
profile = "black"
line_length = 79
multi_line_output = 5
include_trailing_comma = true
honor_noqa = true
